# frc-sim

./: .gitignore  CMakeLists.txt  README.txt  make-ninja.bat  vcpkg.json
assets/: sphere.txt
assets/bodies/: 955collision.glb  field.glb  floor.json  lowpoly_bbox.glb  robot.json  sphere.glb  sphere.json  sphere.step  swurve.glb
assets/scenes/: .test_floor_robot2.json.kate-swp  955.json  mkscene.py  test_floor_robot.json  test_floor_robot2.json
assets/shader/: lighting.fs  lighting.vs
src/: controller.py  main.cpp  multiplayer-dashboard.py
src/core/: BodyDef.h  BodyLoader.cpp  BodyLoader.h  MechanismDef.h  MotorModel.h  MotorRegistry.cpp  MotorRegistry.h  SceneLoader.cpp  SceneLoader.h  ScoreTracker.cpp  ScoreTracker.h  ScoringDef.h  SimLoop.cpp  SimLoop.h  SimWorld.cpp  SimWorld.h  Snapshot.h
src/io/: EasyLog.h  NTClient.cpp  NTClient.h
src/ml/: config.py  env.py  model.py  ppo.py  train.py
src/physics/: ContactListener.cpp  ContactListener.h  ForceApplicator.cpp  ForceApplicator.h  MechanismSystem.cpp  MechanismSystem.h  ShapeLoader.cpp  ShapeLoader.h
src/render/: BodyDraw.cpp  BodyDraw.h  DebugOverlay.cpp  DebugOverlay.h  Renderer.cpp  Renderer.h  StreamEncoder.cpp  StreamEncoder.h  win_raylib_compat.h
